--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,3 +14,26 @@ body {
   background: var(--background);
   font-family: "Amiri", "Poppins";
 }
+html, body, html *, body * {
+  cursor: none;
+}
+.cursor-dot, .cursor-dot-outline {
+  pointer-events: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border-radius: 50%;
+  opacity: 0;
+  transform: translate(-50%, -50%);
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+.cursor-dot {
+  width: 8px;
+  height: 8px;
+  background-color: #B9E5E8;
+}
+.cursor-dot-outline {
+  width: 40px;
+  height: 40px;
+  background-color: #4A628A;
+}
